@@ -4,6 +4,7 @@ Release 1.3.3 (in development)
 Bugs fixed
 ----------
 
+* #2012: Fix exception occurred if ``numfig_format`` is invalid
 
 
 Release 1.3.2 (released Nov 29, 2015)
